--- a/hard_mode.ipynb
+++ b/hard_mode.ipynb
@@ -10,7 +10,8 @@
     "from plotly import graph_objects as go\n",
     "import plotly.figure_factory as ff\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from plotly.subplots import make_subplots"
    ]
   },
   {
